testsuite/tests/lib-dynlink-initializers/test10_main.byte.reference
Error: Failure("Plugin error")
Raised at file "stdlib.ml", line 29, characters 17-33
Called from file "test10_plugin.ml", line 3, characters 2-21
Called from file "test10_plugin.ml", line 6, characters 2-6
Called from file "test10_plugin.ml", line 10, characters 2-6
Called from file "otherlibs/dynlink/dynlink.ml", line 137, characters 16-25
Re-raised at file "otherlibs/dynlink/dynlink.ml", line 139, characters 6-137
Called from file "otherlibs/dynlink/dynlink_common.ml", line 344, characters 13-44
Called from file "list.ml", line 110, characters 12-15
Called from file "otherlibs/dynlink/dynlink_common.ml", line 342, characters 8-240
Re-raised at file "otherlibs/dynlink/dynlink_common.ml", line 352, characters 8-17
Called from file "test10_main.ml", line 51, characters 13-69
